@@ -100,7 +100,6 @@ public final class UtxoUtils {
             return Collections.emptyList();
         }
 
-        return generatedTransaction.getInputs().stream().map(TransactionInput::getValue).collect(
-            Collectors.toList());
+        return generatedTransaction.getInputs().stream().map(TransactionInput::getValue).toList();
     }
 }
